gccida/c1/simplify_plus_minus
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2260:27: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_plus_minus( rtx_code code, machine_mode mode, rtx op0, rtx op1, int force) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2260:42: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_plus_minus( rtx_code code, machine_mode mode, rtx op0, rtx op1, int force) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2296:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v39; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2311:6: error: use of undeclared identifier 'v54'
rtx *v54; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2312:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2312:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2333:4: error: expected ';' after expression
rtx v79; // [rsp+60h] [rbp-C8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2333:5: error: use of undeclared identifier 'v79'
rtx v79; // [rsp+60h] [rbp-C8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2344:6: error: use of undeclared identifier 'v90'
rtx *v90; // [rsp+F0h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2355:1: error: use of undeclared identifier 'v79'
v79 = op1; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2397:8: error: use of undeclared identifier 'v79'
v28 = &v79; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2401:1: error: use of undeclared identifier 'v90'
v90 = v28; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2487:7: error: use of undeclared identifier 'v90'
v28 = v90 + 2; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2511:12: error: expected expression
*( _OWORD *)&base[16 * v48] = *( _OWORD *)&base[v46]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2511:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&base[16 * v48] = *( _OWORD *)&base[v46]; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2511:42: error: expected expression
*( _OWORD *)&base[16 * v48] = *( _OWORD *)&base[v46]; 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2511:34: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&base[16 * v48] = *( _OWORD *)&base[v46]; 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2517:39: error: ISO C requires a named parameter before '...'
specqsort( base, v47, 16, ( int ( *)( ...))simplify_plus_minus_op_data_cmp); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/simplify-rtx.c:2530:14: error: expected expression
v54 = ( rtx *)&base[v51]; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_plus_minus/src/obj/simplify-rtx.o] Error 1
